# firmware

./: .gitignore  .gitmodules  .justfile  CLAUDE.md  CMakeLists.txt  Makefile  README.md  SETUP.md  flake.lock.updated  flake.nix  flake.nix.updated  git_diff_firmware.txt  pyproject.toml
.github/: copilot-instructions.md
ateam-credentials/: Cargo.toml
cmake/: header-utils.cmake  (+4 more)
common/: Cargo.toml
common/packets/: motor.h  stspin_packets.h
common/src/: fmt.rs  lib.rs  queue.rs  task.rs  transfer.rs
common/src/radio/: at_protocol.rs  edm_protocol.rs  mod.rs  odin_radio copy.rs  odin_radio.rs  radio.rs  robot_radio copy.rs  robot_radio.rs
common/tests/: robot_radio_test.rs
control-board/: Cargo.toml  Embed.toml  README.md  build.rs  memory.x
control-board/.cargo/: config.toml
control-board/src/: control.rs  fw_images.rs  git.rs  git_version.rs  image_hash.rs  lib.rs  main.rs  motor.rs  parameter_interface.rs  pins.rs  radio.rs  robot_state.rs  songs.rs  state.rs  stm32_interface.rs  stspin_motor.rs  uart_queue.rs
control-board/src/drivers/: kicker.rs  mod.rs  radio_robot.rs  radio_robot_nora.rs  rotary.rs  shell_indicator.rs
control-board/src/drivers/imu/: bmi085.rs  mod.rs
control-board/src/drivers/radio/: at_protocol.rs  mod.rs  radio.rs  radio_robot.rs
control-board/src/hardware_models/: mod.rs
control-board/src/motion/: active_brake.rs  body_controller.rs  constant_gain_kalman_filter.rs  control.rs  control_context.rs  extended_kalman_filter.rs  mod.rs  pid.rs  robot_controller.rs  robot_model.rs
control-board/src/motion/maneuvers/: global_acceleration.rs  global_position.rs  global_velocity.rs  heading_line.rs  heading_pivot.rs  local_acceleration.rs  local_velocity.rs  mod.rs  pivot.rs  point_line.rs  point_pivot.rs
control-board/src/motion/params/: body_vel_filter_params.rs  body_vel_pid_params.rs  controller_params.rs  mod.rs  robot_params.rs  robot_physical_params.rs
control-board/src/motion/skills/: global_acceleration.rs  global_position.rs  global_velocity.rs  local_acceleration.rs  local_velocity.rs  mod.rs
control-board/src/motion/tasks/: control.rs  mod.rs  radio_task.rs
control-board/src/tasks/: audio_task.rs  control.rs  control_task.rs  dotstar_task.rs  imu.rs  imu_task.rs  kicker_task.rs  mod.rs  power_task.rs  radio_nora_task.rs  radio_task.rs  shutdown_task.rs  user_io_task.rs
control-board/tests/: basic-test.rs  drivetrain-test.rs  uart-queue.rs
kicker-board/: Cargo.toml  memory.x  rust-toolchain.toml
kicker-board/.cargo/: config.toml
kicker-board/src/: energy_manager_critical.rs  image_hash.rs  kick_manager.rs  lib.rs  pins.rs  uart_queue.rs
kicker-board/src/drivers/: breakbeam.rs  breakbeam_pwm.rs  current_controlled_dribbler_motor.rs  mod.rs
kicker-board/src/tasks/: mod.rs
lib-crossarch/: Cargo.toml
lib-crossarch/src/: lib.rs  queue.rs
lib-crossarch/src/filter/: mod.rs
lib-crossarch/src/math/: lerp.rs  mod.rs
lib-crossarch/src/power/: battery.rs  mod.rs
lib-crossarch/src/power/model/: mod.rs
lib-crossarch/tests/: queue.rs
lib-stm32/: Cargo.toml  build.rs
lib-stm32-test/: Cargo.toml  memory.x
lib-stm32-test/.cargo/: config.toml
lib-stm32-test/src/: lib.rs
lib-stm32/.cargo/: config.toml
lib-stm32/src/: lib.rs  queue.rs  units.rs
lib-stm32/src/anim/: mod.rs
lib-stm32/src/audio/: mod.rs  note.rs  pitches.rs  songs.rs  tone_player.rs
lib-stm32/src/audio/songs/: test_song.txt
lib-stm32/src/drivers/: adc.rs  mod.rs
lib-stm32/src/drivers/audio/: buzzer.rs  mod.rs
lib-stm32/src/drivers/boot/: mod.rs  stm32_interface.rs
lib-stm32/src/drivers/flash/: at25df041b.rs  mod.rs
lib-stm32/src/drivers/imu/: bmi085.rs  bmi323.rs  mod.rs
lib-stm32/src/drivers/led/: apa102.rs  mod.rs
lib-stm32/src/drivers/other/: adc_helper.rs  mod.rs
lib-stm32/src/drivers/radio/: at_protocol.rs  edm_protocol.rs  mod.rs  nora_w36x.rs  odin_w26x.rs
lib-stm32/src/drivers/radio/w26x/: edm_protocol.rs  odin_w26x.rs
lib-stm32/src/drivers/radio/w36x/: at_protocol.rs  mod.rs  nora_w36x.rs
lib-stm32/src/drivers/switches/: button.rs  dip.rs  mod.rs  rotary_encoder.rs
lib-stm32/src/filter/: mod.rs
lib-stm32/src/math/: lerp.rs  linear.rs  linear_map.rs  mod.rs  range.rs
lib-stm32/src/model/: mod.rs
lib-stm32/src/power/: battery.rs  mod.rs
lib-stm32/src/power/model/: lipo_model.rs  mod.rs
lib-stm32/src/time/: mod.rs
lib-stm32/src/uart/: mod.rs  queue.rs
lib-stm32/src/util/: mod.rs
lib-stm32/tests/: linear-map.rs  queue.rs
motor/: Cargo.toml  program.sh
motor-embassy/: Cargo.toml  Embed.toml
motor-embassy/.cargo/: config.toml
motor-embassy/drivers/: odin_w26x.rs
motor-embassy/src/: lib.rs  main.rs  queue.rs  robot_model.rs  stm32_bootloader.rs  stm32_interface.rs  stspin_motor.rs  uart_queue.rs
motor-embassy/src/drivers/: mod.rs  rotary.rs  shell_indicator.rs
motor-embassy/src/drivers/radio/: at_protocol.rs  edm_protocol.rs  mod.rs  radio.rs  radio_robot.rs
motor-embassy/tests/: drivetrain-test.rs  uart-queue.rs
motor/.cargo/: config.toml
motor/src/: bodge_pinout.rs  drivers.rs  lib.rs  main.rs  peripherals.rs  stspin.rs
motor/src/drivers/: odin_w26x.rs
motor/src/peripherals/: stm32_bootloader.rs  stspin.rs  timeout.rs  trait_ext.rs  uart.rs
motor/steval-spin3204-6step/: 6step.c  6step.h  current_sensing.h  main.c  quadrature_encoder.c  quadrature_encoder.h  setup.c  setup.h  system.h  time.c  uart.c  uart.h
optical-flow/: Cargo.toml  Embed.toml  build.rs  memory.x  rust-toolchain.toml
optical-flow/.cargo/: config.toml
optical-flow/arduino-src/PAA5100JE-Q-polling/: Bitcraze_PMW3901.cpp
optical-flow/arduino-src/PMW3389DM-polling/: PMW3389DM-polling.ino
optical-flow/src/: lib.rs  paa5100je.rs  pins.rs
power-board/: Cargo.toml  memory.x
power-board/.cargo/: config.toml
power-board/src/: config.rs  lib.rs  limits.rs  pins.rs  power_state.rs  songs.rs
power-board/src/tasks/: audio_task.rs  coms_task.rs  led_task.rs  mod.rs  power_monitoring_task.rs  power_task.rs
stspin-rust/: Cargo.toml  program.sh
stspin-rust/.cargo/: config.toml
(+234 files in other folders)
