[package]
name = "ateam-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "log", "binary_deps"]
log = ["dep:log", "dep:env_logger"]
defmt = [
    "dep:defmt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
]
std = ["critical-section/std", "embassy-executor/std", "embassy-time/std"]
binary_deps = ["dep:async-net", "dep:local-ip-address"]

[dependencies]
ateam-common-packets = { path = "../software-communication/ateam-common-packets/rust-lib" }

defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }
env_logger = { version = "0.9.0", optional = true }
futures-util = { version = "0.3.17", default-features = false }
embassy-executor = { version = "0.1.0", features = [
    "nightly",
    "integrated-timers",
] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.1.0" }
embassy-time = { version = "0.1.0", features = ["nightly", "unstable-traits"] }
critical-section = { version = "1.1" }
heapless = "0.7.16"

async-net = { version = "1.7.0", optional = true }
local-ip-address = { version = "0.4.9", optional = true }

[lib]
test = true
# bench = false

[[bin]]
name = "radio-robot"
required-features = ["std", "log", "binary_deps"]

[[bin]]
name = "radio-testing"
required-features = ["binary_deps"]

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "0412d1922c6cca1200da0af54db3a5dbf60c035c" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "0412d1922c6cca1200da0af54db3a5dbf60c035c" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "0412d1922c6cca1200da0af54db3a5dbf60c035c" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "0412d1922c6cca1200da0af54db3a5dbf60c035c" }
