[package]
name = "ateam-control-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"

defmt = "1.0.1"
defmt-rtt = "1.0.0"

embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-stm32 = { version = "0.4.0", features = [
    "defmt",
    "stm32h723zg",
    "unstable-pac", 
    "time-driver-tim1",
    "exti",
    "chrono"
] }
embassy-futures = { version = "0.1.2" }
embassy-sync = { version = "0.7.2" }

static_cell = "2.1.1"
futures-util = { version = "0.3.31", default-features = false }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
critical-section = "1.1.1"
heapless = "0.9.1"
const_format = "0.2.34"
libm = "0.2.15"
nalgebra = { version = "0.34.0", default-features = false, features = [
        "libm",
        "macros",
] }

smart-leds = "0.4.0"
apa102-spi = "0.5.1"

ateam-lib-stm32 = { path = "../lib-stm32", default-features = false  }
ateam-common-packets = { path = "../software-communication/ateam-common-packets/rust-lib" }
credentials = { path = "../credentials" }

[features]
default = []
no-private-credentials = ["credentials/no-private-credentials"]

[dev-dependencies]
defmt-test = "0.4.0"

[profile.dev]
opt-level = 3
lto = 'fat'
debug-assertions = false

[profile.release]
debug = true
opt-level = 3
lto = 'fat'

[lib]
test = false
harness = false

[[bin]]
name = "control"
test = false
harness = false

[[bin]]
name = "hwtest-adc"
test = false
harness = false

[[bin]]
name = "hwtest-bringup"
test = false
harness = false

[[bin]]
name = "hwtest-dotstar"
test = false
harness = false

[[bin]]
name = "hwtest-imu"
test = false
harness = false

[[bin]]
name = "hwtest-kicker"
test = false
harness = false

[[bin]]
name = "hwtest-kicker-coms"
test = false
harness = false

[[bin]]
name = "hwtest-motor"
test = false
harness = false

[[bin]]
name = "hwtest-piezo"
test = false
harness = false

[[bin]]
name = "hwtest-radio"
test = false
harness = false

[[test]]
name = "basic-test"
harness = false
[[test]]
name = "uart-queue"
harness = false
[[test]]
name = "drivetrain-test"
harness = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy"}
embassy-time = { git = "https://github.com/embassy-rs/embassy"}
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy"}
embassy-futures = { git = "https://github.com/embassy-rs/embassy"}

