[package]
name = "ateam-kicker-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
embassy-executor = { version = "0.5.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "task-arena-size-32768",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f407ve",
    "unstable-pac", 
    "time-driver-tim1",
    "exti",
    "chrono"
] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.5.0" }

defmt = "=0.3.6" # pin this for now, probe run doesn't support wire version 4, which dropped in 3.4 (3.3 recalled)
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

futures-util = { version = "0.3.17", default-features = false }
static_cell = "2.0.0"
critical-section = "1.1.1"
const_format = "0.2.30"
heapless = "0.7.16"
libm = "0.2.6"

smart-leds = "0.4.0"
apa102-spi = "0.4.0"

ateam-lib-stm32 = { path = "../lib-stm32", default-features = false }
ateam-common-packets = { path = "../software-communication/ateam-common-packets/rust-lib" }

[dev-dependencies]
defmt-test = "0.3.0"

[profile.dev]
# opt-level = 3
# lto = 'fat'
debug-assertions = false

[profile.release]
debug = true
lto = 'fat'

[lib]
test = false
harness = false

[[bin]]
name = "hwtest-blinky"
test = false
harness = false

[[bin]]
name = "hwtest-breakbeam"
test = false
harness = false

[[bin]]
name = "hwtest-charge"
test = false
harness = false

[[bin]]
name = "hwtest-coms"
test = false
harness = false

[[bin]]
name = "hwtest-kick"
test = false
harness = false

[[bin]]
name = "kicker"
test = false
harness = false

[[bin]]
name = "kicker-no-uart"
test = false
harness = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy"}
embassy-time = { git = "https://github.com/embassy-rs/embassy"}
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy"}
embassy-futures = { git = "https://github.com/embassy-rs/embassy"}