[package]
name = "ateam-lib-stm32-test"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SSL-A-Team/firmware"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "task-arena-size-32768",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-stm32 = { version = "0.2.0", features = [
    "defmt",
    "stm32h723zg",
    "unstable-pac", 
    "time-driver-tim1",
    "exti",
    "chrono"
] }
embassy-futures = { version = "0.1.0" }
futures-util = { version = "0.3.31", default-features = false }
embassy-sync = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2.0.0"
critical-section = "1.2.0"
const_format = "0.2.34"
heapless = "0.7.16"
libm = "0.2.11"
ateam-lib-stm32 = { path = "../lib-stm32", default-features = false }


[dev-dependencies]
defmt-test = "0.3.0"

[profile.dev]
opt-level = 3
lto = 'fat'
debug-assertions = false

[profile.release]
debug = true
lto = 'fat'

[lib]
test = false
harness = false

[[bin]]
name = "hwtest-uart-queue-mixedrate"
test = false
harness = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy"}
embassy-time = { git = "https://github.com/embassy-rs/embassy"}
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy"}
embassy-futures = { git = "https://github.com/embassy-rs/embassy"}