[package]
name = "ateam-lib-stm32"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A common library for ateam stm32 targets"
repository = "https://github.com/SSL-A-Team/firmware"

[dependencies]
embassy-stm32 = { version = "0.1.0", default-features = false, features = ["exti"]}
embassy-executor = { version = "0.5.0", default-features = false }
embassy-sync = { version = "0.5.0" }
embassy-futures = { version = "0.1.0" }
embassy-time = { version = "0.3.0" }
paste = { version = "1.0.15" }

defmt = "=0.3.6" # pin this for now, probe run doesn't support wire version 4, which dropped in 3.4 (3.3 recalled)
defmt-rtt = "0.3"
critical-section = "1.1.1"

heapless  = "0.8.0"

num-traits = { verison = "0.2.19", default-features = false }
smart-leds = "0.4.0"

[features]
default = ["embassy-stm32/stm32h723zg"]
# stm32h723zg = []

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy"}
embassy-time = { git = "https://github.com/embassy-rs/embassy"}
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy"}
embassy-futures = { git = "https://github.com/embassy-rs/embassy"}

[dev-dependencies]
defmt-test = "0.3.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[lib]
test = false
harness = false

[[test]]
name = "linear-map"
harness = false