[package]
name = "motor-embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
defmt = "0.3"
defmt-rtt = "0.3"
embassy-executor = { version = "0.1.0", features = [
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "unstable-traits",
    "tick-hz-32_768",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "nightly",
    "defmt",
    "stm32h743zi",
    "time-driver-any",
    "exti",
    "unstable-pac",
    "unstable-traits",
] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.1.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "1.0"
critical-section = "1.1.1"

[dev-dependencies]
defmt-test = "0.3.0"

[profile.dev]
opt-level = 3

[profile.release]
debug = true
lto = 'fat'

[lib]
test = false
harness = false

[[bin]]
name = "motor-embassy"
test = false
harness = false

[[test]]
name = "basic-test"
harness = false
[[test]]
name = "uart-queue"
harness = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/SSL-A-Team/embassy", branch = "uart-read-idle" }
embassy-sync = { git = "https://github.com/SSL-A-Team/embassy", branch = "uart-read-idle" }
embassy-time = { git = "https://github.com/SSL-A-Team/embassy", branch = "uart-read-idle" }
embassy-stm32 = { git = "https://github.com/SSL-A-Team/embassy", branch = "uart-read-idle" }
embassy-futures = { git = "https://github.com/SSL-A-Team/embassy", branch = "uart-read-idle" }
