[package]
name = "motor-embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
defmt = "0.3"
defmt-rtt = "0.3"
embassy-executor = { version = "0.1.0", features = [
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "unstable-traits",
    "tick-hz-32_768",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "nightly",
    "defmt",
    "stm32h743zi",
    "time-driver-any",
    "exti",
    "unstable-pac",
    "unstable-traits",
] }
embassy-futures = { version = "0.1.0" }
futures-util = { version = "0.3.17", default-features = false }
embassy-sync = { version = "0.1.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "1.0"
critical-section = "1.1.1"
const_format = "0.2.30"
heapless = "0.7.16"
libm = "0.2.6"
nalgebra = { version = "0.31.0", default-features = false, features = [ "libm" ] }
ateam-common-packets = { path = "../software-communication/ateam-common-packets/rust-lib" }

[dev-dependencies]
defmt-test = "0.3.0"

[profile.dev]
opt-level = 3
lto = 'fat'
debug-assertions = false

[profile.release]
debug = true
lto = 'fat'

[lib]
test = false
harness = false

[[bin]]
name = "motor-embassy"
test = false
harness = false

[[bin]]
name = "radio"
test = false
harness = false

[[bin]]
name = "proto-drivetrain"
test = false
harness = false

[[bin]]
name = "bodge-bot"
test = false
harness = false

[[test]]
name = "basic-test"
harness = false
[[test]]
name = "uart-queue"
harness = false
[[test]]
name = "drivetrain-test"
harness = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "0412d1922c6cca1200da0af54db3a5dbf60c035c" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "0412d1922c6cca1200da0af54db3a5dbf60c035c" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "0412d1922c6cca1200da0af54db3a5dbf60c035c" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "0412d1922c6cca1200da0af54db3a5dbf60c035c" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "0412d1922c6cca1200da0af54db3a5dbf60c035c" }
