[package]
name = "optical-flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
defmt = "0.3"
defmt-rtt = "0.3"
embassy-executor = { version = "0.1.0", features = [
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "unstable-traits",
    "tick-hz-32_768",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "nightly",
    "defmt",
    "stm32f042k6",
    "time-driver-any",
    "exti",
    "unstable-pac",
    "unstable-traits",
] }
embassy-futures = { version = "0.1.0" }
futures-util = { version = "0.3.17", default-features = false }
embassy-sync = { version = "0.1.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "1.0"
critical-section = "1.1.1"
heapless = "0.7.16"
#libm = "0.2.6"
#nalgebra = { version = "0.31.0", default-features = false, features = [ "libm" ] }
ateam-common-packets = { path = "../software-communication/ateam-common-packets/rust-lib" }

[dev-dependencies]
defmt-test = "0.3.0"

[profile.dev]
opt-level = 3

[profile.release]
debug = true
lto = 'fat'

[lib]
test = false
harness = false

[[bin]]
name = "opticalflow"
test = false
harness = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/SSL-A-Team/embassy", branch = "master" }
embassy-sync = { git = "https://github.com/SSL-A-Team/embassy", branch = "master" }
embassy-time = { git = "https://github.com/SSL-A-Team/embassy", branch = "master" }
embassy-stm32 = { git = "https://github.com/SSL-A-Team/embassy", branch = "master" }
embassy-futures = { git = "https://github.com/SSL-A-Team/embassy", branch = "master" }
#embassy-executor = { path = "/Users/petersonev/Documents/Projects/git/embassy/embassy-executor" }
#embassy-sync = { path = "/Users/petersonev/Documents/Projects/git/embassy/embassy-sync" }
#embassy-time = { path = "/Users/petersonev/Documents/Projects/git/embassy/embassy-time" }
#embassy-stm32 = { path = "/Users/petersonev/Documents/Projects/git/embassy/embassy-stm32" }
#embassy-futures = { path = "/Users/petersonev/Documents/Projects/git/embassy/embassy-futures" }
